day1 html practice done

--- a/day1/index.html
+++ b/day1/index.html
@@ -18,12 +18,70 @@
 <body>
 
     <section class="section-padding">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
-                <div class="col-md-12">
-                    <div class="section-title">
+                <div class="col-md-4">
+                    <a href="" class="single-serviece-item">
+                        <div class="service-bg">
+                            <img src="assets/img/service-bg11.jpg" alt="">
+                        </div>
+                        <h2>service title</h2>
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <a href="" class="single-serviece-item">
+                        <div class="service-bg">
+                            <img src="assets/img/service-bg12.jpg" alt="">
+                        </div>
+                        <h2>service title</h2>
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <a href="" class="single-serviece-item">
+                        <div class="service-bg">
+                            <img src="assets/img/service-bg13.jpg" alt="">
+                        </div>
+                        <h2>service title</h2>
+                    </a>
+                </div>
+            </div>
+            <div class="row">
 
+                <div class="col-md-4">
+                    <a href="" class="single-serviece-item">
+                        <div class="service-bg">
+                            <img src="assets/img/service-bg14.jpg" alt="">
+                        </div>
+                        <h2>service title</h2>
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <a href="" class="single-serviece-item">
+                        <div class="service-bg">
+                            <img src="assets/img/service-bg15.jpg" alt="">
+                        </div>
+                        <h2>service title</h2>
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <div href="" class="single-serviece-item fake-service">
+                        <div class="service-bg">
+                            <img src="assets/img/service-bg15.jpg" alt="">
+                        </div>
+                        <h2>&nbsp;</h2>
+
+                        <div class="service-cta">
+                            <div class="service-cta-inner">
+                                <div class="service-cta-tablecell">
+                                    <h1>This is heading</h1>
+                                    <p>Lorem ipsum dolor sit amet</p>
+                                    <div class="service-btn btn btn-danger">Call Us</div>
+                                    <p>+8801744482292</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
+
                 </div>
             </div>
         </div>
