--- a/day1/index.html
+++ b/day1/index.html
@@ -25,7 +25,7 @@
                         <div class="service-bg">
                             <img src="assets/img/service-bg11.jpg" alt="">
                         </div>
-                        <h2>service title</h2>
+                        <h2>Tanguar Haor</h2>
                     </a>
                 </div>
                 <div class="col-md-4">
@@ -33,7 +33,7 @@
                         <div class="service-bg">
                             <img src="assets/img/service-bg12.jpg" alt="">
                         </div>
-                        <h2>service title</h2>
+                        <h2>Niladri Lake</h2>
                     </a>
                 </div>
                 <div class="col-md-4">
@@ -41,7 +41,7 @@
                         <div class="service-bg">
                             <img src="assets/img/service-bg13.jpg" alt="">
                         </div>
-                        <h2>service title</h2>
+                        <h2>Boga Lake</h2>
                     </a>
                 </div>
             </div>
@@ -52,7 +52,7 @@
                         <div class="service-bg">
                             <img src="assets/img/service-bg14.jpg" alt="">
                         </div>
-                        <h2>service title</h2>
+                        <h2>Lake Valley</h2>
                     </a>
                 </div>
                 <div class="col-md-4">
@@ -60,7 +60,7 @@
                         <div class="service-bg">
                             <img src="assets/img/service-bg15.jpg" alt="">
                         </div>
-                        <h2>service title</h2>
+                        <h2>Sajek Valley</h2>
                     </a>
                 </div>
                 <div class="col-md-4">
@@ -73,10 +73,10 @@
                         <div class="service-cta">
                             <div class="service-cta-inner">
                                 <div class="service-cta-tablecell">
-                                    <h1>This is heading</h1>
-                                    <p>Lorem ipsum dolor sit amet</p>
+                                    <h1>You can choose any where in bangladesh</h1>
+                                    <p>You can contact us for any information</p>
                                     <div class="service-btn btn btn-danger">Call Us</div>
-                                    <p>+8801744482292</p>
+                                    <p>+8801754545252</p>
                                 </div>
                             </div>
                         </div>
