Day two practice done

--- a/day2/index.html
+++ b/day2/index.html
@@ -24,8 +24,8 @@
                     <div class="shadow-content">
                         <h1>Lorem ipsum dolor sit amet consectetur</h1>
                         <p class="price-meta">$550</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem voluptatum modi magni quis
-                            quod
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque ipsam qui ab veritatis porro
+                            ipsum consectetur sit cupiditate
                         </p>
                         <a href="" class="tour-btn">View more Tours</a>
                     </div>
